# api.yaml
@@ -1097,6 +1097,20 @@ paths:
           description: "No Found Permission"
 
   #Master Tag
+  /getMasterBussiness:
+    get:
+      tags:
+        - "master"
+      security:
+        - bearerAuth: []
+      summary: This return a single Object
+      description: Returning a Object
+      responses:
+        "200":
+          description: "success"
+        "400":
+          description: "Error"
+
   /MasterRate:
     get:
       tags:
